# Quark

./: CMakeLists.txt  generate_project.bat  update_project.bat
Data/: settings.json
Demo/: CMakeLists.txt  DemoMain.hpp  Main.cpp
Engine/: CMakeLists.txt
Engine/Core/: Components.hpp  Engine.cpp  Engine.hpp  EngineModule.hpp  Scene.hpp  Types.hpp
Engine/Gameplay/: GameplayModule.cpp  GameplayModule.hpp
Engine/Input/: Input.cpp  Input.hpp
Engine/Libraries/taskflow/docs/: taskflow_8hpp_source.html
Engine/Libraries/taskflow/sandbox/lavamd/: README
Engine/Renderer/: Components.hpp  RenderModule.cpp  RenderModule.hpp  stb_image.h  stb_image_write.h
Engine/Renderer/Backend/vulkan/: Device.hpp
Engine/Renderer/Device/: RenderCommand.hpp  RenderCommandDispatch.hpp  RenderCommandType.hpp
